--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,7 @@
 <!-- Footer Area Start Here -->
 <footer class="footer-wrap-layout1 noPrint">
-    <div class="copyright">کپی رایت و حقوق محفوظ است. طراحی و توسعه توسط <a target="_blank" href="https://picowin.com">Picowin.com</a></div>
+    <div class="copyright">کپی رایت و حقوق محفوظ است. طراحی و توسعه توسط
+        <a target="_blank" href="https://github.com/AminAliH47">AminAlih47</a>
+    </div>
 </footer>
 <!-- Footer Area End Here -->
