change_password.html was updated

--- a/manager/templates/manager/persons/change_password.html
+++ b/manager/templates/manager/persons/change_password.html
@@ -34,7 +34,7 @@
                                     <button type="button" onclick="submit_change_password()" class="btn btn-warning">
                                         تغییر گذرواژه
                                     </button>
-                                    <a href="{% url 'main:login' %}" class="btn btn-secondary text-light">برگشت</a>
+                                    <a href="{% url 'account:login' %}" class="btn btn-secondary text-light">برگشت</a>
                                 </div>
                             </form>
                             {% elif request.resolver_match.url_name == "change_password" %}
@@ -67,7 +67,7 @@
                                     <button type="submit" class="btn btn-warning">
                                         تغییر گذرواژه
                                     </button>
-                                    <a href="{% url 'main:login' %}" class="btn btn-secondary text-light">برگشت</a>
+                                    <a href="{% url 'account:login' %}" class="btn btn-secondary text-light">برگشت</a>
                                 </div>
                             </form>
 
